base remove period

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
               outDir: "dist",
               emptyOutDir: true,
             },
-            base: "./",
+            base: "/",
           });
           EOF
           
